style(footer): fix button gotop z-index problem while opening residence

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -10,7 +10,7 @@
     height: 50px;
     right: 80px;
     top: -25px;
-    z-index: 300;
+    z-index: 2;
     border-radius: 100%;
     background-color: #8DC080;
     background-image: url("../img/up.svg");
